--- a/ofisart.azFront/public/locales/az/translation.json
+++ b/ofisart.azFront/public/locales/az/translation.json
@@ -4,6 +4,8 @@
     "newproduct": "Yeni məhsullar",
     "products": "Məhsullar",
     "tables": "Masalar",
+    "table":"Masa",
+    "manager":"Menecer masaları",
     "sofas/armchairs": "Divanlar/Kreslolar",
     "closets": "Dolablar",
     "other": "Digər",
