--- a/ofisart.azFront/public/locales/en/translation.json
+++ b/ofisart.azFront/public/locales/en/translation.json
@@ -4,6 +4,8 @@
     "newproduct": "New products",
     "products": "Products",
     "tables": "Tables",
+    "table":"Table",
+    "manager":"Manager desks",
     "sofas/armchairs": "Sofas/Armchairs",
     "closets": "Closets",
     "other": "Other",
