--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -4,17 +4,15 @@
     "newproduct": "новые продукты",
     "products": "Продукты",
     "tables": "Таблицы",
+    "table": "Стол",
+    "manager":"Столы менеджеров",
     "sofas/armchairs": "Диваны/кресла",
     "closets": "шкафы",
     "other": "Другой",
     "connection": "Связь",
     "projectsf": "Проекты",
-    "design":"Дизайн и роскошь, как никогда раньше",
-    "crafted":"Потому что это лучший дизайн, созданный",
+    "design": "Дизайн и роскошь, как никогда раньше",
+    "crafted": "Потому что это лучший дизайн, созданный",
     "furniture": "Мебель, которую вы так заслуживаете",
-    "luxury":"Роскошь, которую раньше никто не мог себе позволить"
-
-
-
-
+    "luxury": "Роскошь, которую раньше никто не мог себе позволить"
 }
