--- a/ofisart.azFront/public/locales/az/translation.json
+++ b/ofisart.azFront/public/locales/az/translation.json
@@ -3,6 +3,8 @@
     "projects": "Layihələrimiz",
     "newproduct": "Yeni məhsullar",
     "products": "Məhsullar",
+    "about": "Haqqımızda",
+    "contact": "Əlaqə",
     "tables": "Masalar",
     "table":"Masa",
     "manager":"Menecer masaları",
