--- a/ofisart.azFront/public/locales/en/translation.json
+++ b/ofisart.azFront/public/locales/en/translation.json
@@ -3,6 +3,8 @@
     "projects": "Our projects",
     "newproduct": "New products",
     "products": "Products",
+    "about": "About us",
+    "contact": "Contact",
     "tables": "Tables",
     "table":"Table",
     "manager":"Manager desks",
