--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -3,6 +3,8 @@
     "projects": "Наши проекты",
     "newproduct": "новые продукты",
     "products": "Продукты",
+    "about": "О нас",
+    "contact": "Контакт",
     "tables": "Таблицы",
     "table": "Стол",
     "manager":"Столы менеджеров",
