--- a/ofisart.azFront/public/locales/en/translation.json
+++ b/ofisart.azFront/public/locales/en/translation.json
@@ -6,8 +6,8 @@
     "about": "About us",
     "contact": "Contact",
     "tables": "Tables",
-    "table":"Table",
-    "manager":"Manager desks",
+    "table": "Table",
+    "manager": "Manager desks",
     "sofas/armchairs": "Sofas/Armchairs",
     "closets": "Closets",
     "other": "Other",
@@ -16,5 +16,29 @@
     "design": "Designs and luxury like never before",
     "crafted": "Because it is the finest design crafted",
     "furniture": "The furniture you deserve so much",
-    "luxury":"Luxury no one could afford before"
+    "luxury": "Luxury no one could afford before",
+    "workerdesk": "Worker Desks",
+    "meetingtables": "Meeting Tables",
+    "homeofficedesks": "Home Office Desks",
+    "magazinetable": "Magazine Tables",
+    "managerchair": "Manager Chairs",
+    "workchairs": "Worker Chairs",
+    "sofas": "Sofas",
+    "shelves": "Shelves",
+    "filingcabinets": "Filing Cabinets",
+    "tumba":"Tumbas",
+    "dresser":"Dresser",
+    "clotheshangers":"Clothes Hangers",
+    "accessories":"Accessories",
+    "sofa/armchair":"Sofa/Armchair",
+    "closet":"Closet"
+
+
+
+
+
+
+
+
+
 }
