--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -7,7 +7,7 @@
     "contact": "Контакт",
     "tables": "Таблицы",
     "table": "Стол",
-    "manager":"Столы менеджеров",
+    "manager": "Столы менеджеров",
     "sofas/armchairs": "Диваны/кресла",
     "closets": "шкафы",
     "other": "Другой",
@@ -16,5 +16,20 @@
     "design": "Дизайн и роскошь, как никогда раньше",
     "crafted": "Потому что это лучший дизайн, созданный",
     "furniture": "Мебель, которую вы так заслуживаете",
-    "luxury": "Роскошь, которую раньше никто не мог себе позволить"
+    "luxury": "Роскошь, которую раньше никто не мог себе позволить",
+    "workerdesk": "Рабочие столы",
+    "meetingtables": "Стол для совещаний",
+    "homeofficedesks": "Столы для домашнего офиса",
+    "magazinetable": "Журнальные столики",
+    "managerchair": "Кресла для менеджеров",
+    "workchairs": "Рабочие стулья",
+    "sofas": "Диваны",
+    "shelves": "Полки",
+    "filingcabinets": "Шкафы",
+    "tumba": "тумба",
+    "dresser": "Комоды",
+    "clotheshangers": "Вешалки для одежды",
+    "accessories": "Аксессуары",
+    "sofa/armchair": "Диван/Кресло",
+    "closet": "Шкаф"
 }
