--- a/ofisart.azFront/public/locales/az/translation.json
+++ b/ofisart.azFront/public/locales/az/translation.json
@@ -26,10 +26,21 @@
     "sofas": "Divanlar",
     "shelves": "Rəfli Dolablar",
     "filingcabinets": "Sənəd Dolabları",
-    "tumba":"Tumbalar",
-    "dresser":"Kamodlar",
-    "clotheshangers":"Paltar Asqılıqları",
-    "accessories":"Aksesuarlar",
-    "sofa/armchair":"Divan/Kreslo",
-    "closet":"Dolab"
+    "tumba": "Tumbalar",
+    "dresser": "Kamodlar",
+    "clotheshangers": "Paltar Asqılıqları",
+    "accessories": "Aksesuarlar",
+    "sofa/armchair": "Divan/Kreslo",
+    "closet": "Dolab",
+    "who": "Biz kimik?",
+    "whodesc": "OfisArt 2020-ci ildə qurulmuş mebel brendidir və missiyamız iş yerlərinizi və ofislərinizi sənət və estetika ilə bir araya gətirərək daha funksional, rahat və göz oxşayan etməkdir. Müştəri məmnuniyyəti bizim prioritetimizdir və biz keyfiyyət standartlarımızı buna uyğun olaraq yüksək səviyyədə saxlayırıq. OfisArt olaraq müştərilərimizə unikal mebel təcrübələri təqdim etməyi və hər bir məhsulumuzla uzunmüddətli keyfiyyətə zəmanət verməyi hədəfləyirik. Ofis mebellərindən tutmuş konfrans zalı tənzimləmələrinə, erqonomik stullardan tutmuş saxlama həllərinə qədər geniş çeşidli məhsullarımızla iş yerinizi yenidən yaratmağınıza kömək edirik. OfisArt ilə iş yerlərinizi daha funksional, daha qəşəng və daha rahat edin.",
+    "manifest": "Manifestimiz",
+    "manifestdesc": "OfisArt komandası olaraq iş yerlərini və ofisləri təkcə mebel deyil, sənət əsərinə çevirmək vizyonu ilə yola çıxdıq. Mebel sadəcə bir əşya deyil, iş yerlərinizin xarakterini əks etdirən və estetik ifadə ilə funksionallıq arasında mükəmməl tarazlığı təmin edən bir sənət növüdür.",
+    "manifestfirst": "Biz estetika və funksiyanı birləşdiririk.",
+    "manifestsecond": "Biz sənəti iş yerlərinə gətirməklə yaradıcılığı dəstəkləyirik.",
+    "manifestthird": "Müştəri məmnuniyyəti bizim prioritetimizdir.",
+    "manifestfourth": "Müasir dizayn və keyfiyyətli istehsalımızla seçilirik.",
+    "manifestfifth": "Ofislərinizi daha rahat və səmərəli etmək üçün buradayıq.",
+    "login": "Daxil Ol",
+    "logout":"Çıxış"
 }
