--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -31,5 +31,17 @@
     "clotheshangers": "Вешалки для одежды",
     "accessories": "Аксессуары",
     "sofa/armchair": "Диван/Кресло",
-    "closet": "Шкаф"
+    "closet": "Шкаф",
+    "who": "Кто мы?",
+    "whodesc": "OfisArt — мебельный бренд, основанный в 2020 году, и наша миссия — сделать ваши рабочие места и офисы более функциональными, удобными и привлекательными, сочетая искусство и эстетику. Удовлетворение потребностей клиентов является нашим приоритетом, и мы соответственно поддерживаем высокие стандарты качества. В OfisArt мы стремимся предоставить нашим клиентам уникальные впечатления от мебели и гарантировать долгосрочное качество каждого из наших продуктов. От офисной мебели до обустройства конференц-зала, от эргономичных стульев до решений для хранения вещей — мы поможем вам обновить ваше рабочее место с помощью нашего широкого ассортимента продукции. Сделайте свои рабочие места функциональнее, стильнее и комфортнее вместе с OfisArt.",
+    "manifest": "Наш манифест",
+    "manifestdesc": "Как команда OfisArt, мы поставили перед собой задачу превратить рабочие места и офисы в произведения искусства, а не просто в мебель. Мебель — это не просто предмет, а форма искусства, которая отражает характер вашего рабочего места и обеспечивает идеальный баланс между эстетической выразительностью и функциональностью.",
+    "manifestfirst": "Мы совмещаем эстетику и функциональность.",
+    "manifestsecond": "Мы поддерживаем творчество, привнося искусство на рабочее место.",
+    "manifestthird": "Удовлетворение потребностей клиентов является нашим приоритетом.",
+    "manifestfourth": "Нас отличает современный дизайн и качественное производство.",
+    "manifestfifth": "Мы здесь, чтобы сделать ваши офисы более комфортными и эффективными.",
+    "login": "авторизоваться",
+    "logout":"выйти"
+
 }
