--- a/ofisart.azFront/public/locales/az/translation.json
+++ b/ofisart.azFront/public/locales/az/translation.json
@@ -42,5 +42,6 @@
     "manifestfourth": "Müasir dizayn və keyfiyyətli istehsalımızla seçilirik.",
     "manifestfifth": "Ofislərinizi daha rahat və səmərəli etmək üçün buradayıq.",
     "login": "Daxil Ol",
-    "logout":"Çıxış"
+    "logout":"Çıxış",
+    "account":"Hesab"
 }
