--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -42,6 +42,8 @@
     "manifestfourth": "Нас отличает современный дизайн и качественное производство.",
     "manifestfifth": "Мы здесь, чтобы сделать ваши офисы более комфортными и эффективными.",
     "login": "авторизоваться",
-    "logout":"выйти"
+    "logout":"выйти",
+    "account":"счет"
+
 
 }
