--- a/ofisart.azFront/public/locales/en/translation.json
+++ b/ofisart.azFront/public/locales/en/translation.json
@@ -42,7 +42,9 @@
     "manifestfourth":"We are distinguished by our modern design and quality production.",
     "manifestfifth":"We are here to make your offices more comfortable and efficient.",
     "login": "Log In",
-    "logout":"Log Out"
+    "logout":"Log Out",
+    "account":"Account"
+
 
 
 
