--- a/ofisart.azFront/public/locales/ru/translation.json
+++ b/ofisart.azFront/public/locales/ru/translation.json
@@ -1,4 +1,5 @@
 {
+    "reception": "Cтойки приема клиентов",
     "title": "Лучший продавец",
     "projects": "Наши проекты",
     "newproduct": "новые продукты",
@@ -43,7 +44,9 @@
     "manifestfifth": "Мы здесь, чтобы сделать ваши офисы более комфортными и эффективными.",
     "login": "авторизоваться",
     "logout":"выйти",
-    "account":"счет"
+    "account":"счет",
+    "safe":"Cейфы"
+
 
 
 }
